--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: maven:3-jdk-8
 
 build:
-  script: "mvn clean package"
+  script: "mvn clean package -e"
   artifacts:
     name: "Pets"
     paths:
